# crabby-bird

./: CHANGELOG.md  CREDITS.md  Cargo.toml  LICENSE.md  README.md  rustfmt.toml  settings.json
.cargo/: config.toml
.github/workflows/: release.yml
.zed/: settings.json
src/: components.rs  debug.rs  default.rs  game.rs  game_state.rs  input.rs  lib.rs  main.rs  physics.rs  pipes.rs  resources.rs  scene.rs
