[package]
name = "crabby-bird"
version = "1.0.0"
edition = "2024"
license = "LICENSE.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.16", features = ["wayland", "track_location"] }
avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }
rand = "0.9"

log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_error",
] }
# Compile low-severity logs out of web builds for performance.
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[features]
default = [
    # Default to a native build with hot-reloading.
    "native",
]
# Features for native builds.
native = ["bevy/file_watcher", "bevy/embedded_watcher"]
# Features for development builds.
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
]

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "debuginfo"

[profile.release-native]
# Default to release profile values.
inherits = "release"
opt-level = "s"
lto = "fat"
strip = true
codegen-units = 1
